--- a/ibc_config.ini
+++ b/ibc_config.ini
@@ -219,7 +219,7 @@ OverrideTwsApiPort=4001
 # account security programme, this setting is ignored. The default
 # is 'no'.
 
-ReadOnlyLogin=yes
+ReadOnlyLogin=no
 
 
 # If ReadOnlyApi is set to 'yes', API programs cannot submit, modify 
@@ -232,7 +232,7 @@ ReadOnlyLogin=yes
 # set the relevant checkbox (this only needs to be done once) and
 # not provide a value for this setting.
 
-ReadOnlyApi=yes
+ReadOnlyApi=no
 
 # Logging in to a paper-trading account results in TWS displaying
 # a dialog asking the user to confirm that they are aware that this
@@ -396,7 +396,7 @@ SaveTwsSettingsAt=
 # IBC.  Commands can always be sent from the
 # same host as IBC is running on.
 
-ControlFrom=
+ControlFrom='tws'
 
 
 # Specifies the IP address on which the Command Server
